--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Pozdrav svima</h1>
-    <div id="poruka"></div>
+    <!-- Selektovanje i upravljanje HTML elementima u Javascriptu -->
+    
+   <span>Audi</span><hr>
+   <span>BMW</span><hr>
+   <span>Mercedes</span><hr>
+
+   <div class="automobil-model">A4</div>
+   <div class="automobil-model">320D</div>
+   <div class="automobil-model">E220</div>
+
+   <p id="recenica">Ova recenica je napisana u HTML-u.</p>
+
     <script src="script.js"></script>
 </body>
 </html>
