--- a/02_Shopping-cart/index.html
+++ b/02_Shopping-cart/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkulator inflacije</title>
-    <link rel="stylesheet" href="inflacija.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="/02_Shopping-cart/style.css">
 </head>
 <body>
-    <script src="inflacija.js"></script>
-    <!-- 2:49:00 video -->
+    <script src="/02_Shopping-cart/script.js"></script>
 </body>
 </html>
