--- a/02_Shopping-cart/index.html
+++ b/02_Shopping-cart/index.html
@@ -8,6 +8,109 @@
     <link rel="stylesheet" href="/02_Shopping-cart/style.css">
 </head>
 <body>
+
+    <input type="text" id="email"><br><br>
+
+    <button onclick="validacija()">Validiraj</button>
+
     <script src="/02_Shopping-cart/script.js"></script>
 </body>
 </html>
+
+
+
+
+<!-- Peti dio videa -->
+
+<!-- 
+<div class="glavni-div">
+        
+</div><br> -->
+
+
+
+
+<!-- Cetvrti dio videa -->
+
+<!-- <div class="glavni-div">
+    <div class="inner-div">
+        <div class="double-inner">
+            <a href="#" 
+               class="drugi-link"
+               data-text="testing">
+               Link 2
+            </a>
+        </div>
+    </div>
+</div><br> -->
+
+
+
+
+
+
+<!-- Treci dio videa -->
+
+
+<!-- <div class="glavni-div">
+    <a href="#" class="prvi-link">Link 1</a>
+    <a href="#" class="drugi-link">Link 2</a>
+    <a href="#" class="treci-link">Link 3</a>
+</div><br> -->
+
+
+
+
+
+
+
+
+<!-- Drugi dio videa -->
+
+
+<!-- <div class="glavni-div">
+    <span>
+        <a href="" class="moj-link">Link 1</a>
+    </span>
+</div>
+
+<div class="glavni-div">
+    <section>
+        <a href="" class="moj-link">Link 2</a>
+    </section>
+</div>
+
+<div class="glavni-div">
+    <div class="inner-div">
+        <span>
+            <a href="" class="moj-link">Link 3</a>
+        </span>
+    </div>
+</div>
+
+<button onclick="testing()">Klikni</button> -->
+
+
+
+
+
+
+
+
+<!-- Prvi dio videa -->
+
+
+<!-- 
+<h1>Hello world</h1>
+
+<button class="zuta-boja prvo-dugme" onclick="pokreniMe(this)">
+    Zuto dugme
+</button>
+<button class="zelena-boja" onclick="pokreniMe(this)">
+    Zeleno dugme
+</button>
+<button class="plava-boja" onclick="pokreniMe(this)">
+    Plavo dugme
+</button>
+
+<p id="kliknutoDugme"></p> -->
