--- a/03_functions/bubnjevi.html
+++ b/03_functions/bubnjevi.html
@@ -100,6 +100,8 @@
 	<audio data-key="73" src="sounds/hihat-open.wav"></audio>
 	<audio data-key="75" src="sounds/hihat-close.wav"></audio>
 
+    <!-- data-key su brojcani predstavnici dugmeta kojeg kliknemo -->
+
     <script src="bubnjevi.js"></script>
 
 </body>
