--- a/08_OOP/index.html
+++ b/08_OOP/index.html
@@ -7,6 +7,7 @@
     <title>Validacija forme</title>
     <link rel="stylesheet" href="style.css">
     <script src="validator.js" defer></script>
+	<script src="config.js" defer></script>
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -15,27 +16,27 @@
 		<h1>Registracija korisnika</h1>
 		<div>
 			<label for="ime_prezime">Ime i prezime: *</label>
-			<input id="ime_prezime" type="text" name="ime_prezime" placeholder="Niko Nikolic">
+			<input id="ime_prezime" type="text" name="ime_prezime" placeholder="Unesite vase ime i prezime">
 		</div>
 		<div>
 			<label for="korisnicko_ime">Korisničko ime: *</label>
-			<input id="korisnicko_ime" type="text" name="korisnicko_ime" placeholder="niko.nikolic1">
+			<input id="korisnicko_ime" type="text" name="korisnicko_ime" placeholder="Unesite vase korisnicko ime">
 		</div>
 		<div>
 			<label for="email">Email adresa: *</label>
-			<input id="email" type="text" name="email" placeholder="niko.nikolic@mail.com">
+			<input id="email" type="text" name="email" placeholder="Unesite vas email">
 		</div>
 		<div>
 			<label for="broj_telefona">Broj Telefona:</label>
-			<input id="broj_telefona" type="text" name="broj_telefona" placeholder="+381 00 123 456">
+			<input id="broj_telefona" type="number"  min="0" max="9" name="broj_telefona" placeholder="Unesite broj telefona">
 		</div>
 		<div>
 			<label for="lozinka">Lozinka: *</label>
-			<input id="lozinka" type="text" name="lozinka" placeholder="*******">
+			<input id="lozinka" type="password" name="lozinka" placeholder="*********">
 		</div>
 		<div>
 			<label for="ponovi_lozinku">Ponovi lozinku: *</label>
-			<input id="ponovi_lozinku" type="text" name="ponovi_lozinku" placeholder="*******">
+			<input id="ponovi_lozinku" type="password" name="ponovi_lozinku" placeholder="*********">
 		</div>
 		<div>
 			<button>Registruj se</button>
@@ -44,3 +45,7 @@
 
 </body>
 </html>
+
+
+
+<!-- Polja koja su oznacena zvjezdicom su obavezna za popuniti -->
