--- a/11_drustvena_mreza/index.html
+++ b/11_drustvena_mreza/index.html
@@ -72,7 +72,7 @@
 
     <script src="js/validator.js"></script>
     <script src="js/script.js"></script>
-    <!-- video 34:00 -->
+    <!-- 1:15:00 video -->
 </body>
 
 </html>
